# BatteryCompare

./: .replit  app.py  generate_quick_sample.py  generate_sample_data.py  generate_separate_samples.py  pyproject.toml  replit.md  requirements.txt  sample_battery_data.xlsx  sample_build_A_25C.xlsx  sample_build_B_25C.xlsx  sample_build_C_0C.xlsx
attached_assets/: Pasted-1-Analyze-the-file-thoroughly-Go-through-every-line-of-_1764926691116.txt  Pasted-1-Analyze-the-file-thoroughly-Go-through-every-line-of-_1764927487399.txt  Pasted-For-every-new-build-of-1-type-of-battery-Keep-the-values-of-previous-build-We-ll-change-informati-1762769546874_1762769546874.txt  Pasted-Lets-Eliminate-the-Min-Voltage-from-metrics-comparison-table-instead-add-voltage-at-targeted-dura-1763017020710_1763017020710.txt  Pasted-TypeError-not-supported-between-instances-of-str-and-int-Traceback-File-home-runner-wo-1763621167438_1763621167438.txt  build1_1761897621053.xlsx  build1_1763615667481.xlsx  build1_1763621204958.xlsx  build2_1761897621053.xlsx  complete_dataset_1764747758470.xlsx  complete_dataset_1765532013252.xlsx  sample_data_1764930973040.xlsx
