[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "argon2>=0.1.10",
    "argon2-cffi>=25.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "psycopg2-binary>=2.9.11",
    "reportlab>=4.4.4",
    "scipy>=1.16.3",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
]
